grammar.js
    program: $ => seq(
        $._start,
        repeat(choice($._expression, $._semicolon, $._newline))
    ),

    // Function definitions.
    call: $ => withPrec(PREC.CALL, seq(
      field("function", $._expression),
      field("arguments", alias($.call_arguments, $.arguments))
    )),

    argument: $ => choice(
      $._argument_named,
      $._argument_unnamed
    ),

    // Note that the value is optional, i.e. both of these are valid:
    // fn(a = 1)
    // fn(a = )
    _argument_named: $ => seq(
      field("name", $._argument_name_string_or_identifier_or_null),
      "=",
      optional($._argument_value)
    ),

    _argument_unnamed: $ => $._argument_value,

    unary_operator: $ => {
      const table = [
        ["?", PREC.HELP],
        ["~", PREC.TILDE],
        ["!", PREC.UNARY_NOT],
        ["+", PREC.UNARY_PLUS_MINUS],
        ["-", PREC.UNARY_PLUS_MINUS]
      ];

      return choice(...table.map(([operator, prec]) => prec.ASSOC(prec.RANK, seq(
        field("operator", operator),
        repeat($._newline),
        field("rhs", $._expression)
      ))))
    },

    // NOTE: Expressions are allowed on either side of the operator
    binary_operator: $ => {
      const table = [
        ["?", PREC.HELP],

        ["~", PREC.TILDE],

        ["<-", PREC.LEFT_ASSIGN],
        ["<<-", PREC.LEFT_ASSIGN],
        [":=", PREC.LEFT_ASSIGN],

        ["->", PREC.RIGHT_ASSIGN],
        ["->>", PREC.RIGHT_ASSIGN],

        ["=", PREC.EQUALS_ASSIGN],

        ["|", PREC.OR],
        ["&", PREC.AND],

        ["||", PREC.OR],
        ["&&", PREC.AND],

        ["<", PREC.COMPARISON],
        ["<=", PREC.COMPARISON],
        [">", PREC.COMPARISON],
        [">=", PREC.COMPARISON],
        ["==", PREC.COMPARISON],
        ["!=", PREC.COMPARISON],

        ["+", PREC.PLUS_MINUS],
        ["-", PREC.PLUS_MINUS],
        ["*", PREC.MULTIPLY_DIVIDE],
        ["/", PREC.MULTIPLY_DIVIDE],
        ["**", PREC.EXPONENTIATE],
        ["^", PREC.EXPONENTIATE],

        // Special infix operator
        // Regex: Between two `%`, anything but another `%`, `\`, or `\n`.
        // Includes primitives `%%` and `%/%`.
        // Alias is used for targeting in `highlights.scm`.
        // TODO: This could probably be fine tuned to disallow more things.
        [alias(/%[^%\\\n]*%/, "special"), PREC.SPECIAL_OR_PIPE],
        ["|>", PREC.SPECIAL_OR_PIPE],

        [":", PREC.COLON]
      ];

      return choice(...table.map(([operator, prec]) => prec.ASSOC(prec.RANK, seq(
        field("lhs", $._expression),
        field("operator", operator),
        repeat($._newline),
        field("rhs", $._expression)
      ))))
    },

    // NOTE: Expression on LHS, string/identifier on RHS
    integer: $ => seq($._float_literal, "L"),
    complex: $ => seq($._float_literal, "i"),
    float: $ => $._float_literal,

    // NOTE: See `?NumericConstants` for precise details
    //
    // For hexadecimal:
    // - '0'
    // - 'x' or 'X'
    // - Non-empty sequence of '[0-9a-fA-F.]' restricted to at most 1 '.'
    //   - LHS `([0-9a-fA-F]+(\.[0-9a-fA-F]*)?)` handles 0x1, 0x1.2
    //   - RHS `(\.[0-9a-fA-F]*)` handles 0x.1, and 0x. (surprisingly R allows this)
    // - Optional binary exponent of:
    //   - 'p' or 'P'
    //   - Optional '+' or '-'
    //   - Non-empty sequence of '[0-9]'
    _float_literal: $ => choice($._hex_literal, $._number_literal),

    // Strings.
    string: $ => choice(
      $._raw_string_literal,
      $._single_quoted_string,
      $._double_quoted_string
    ),

    // TODO: Raw string contents, something like this, where `_raw_string_open`,
    // `_raw_string_close`, and `_raw_string_content` are externals.
    // _raw_string_literal: $ => seq(
    //   field("open", $._raw_string_open),
    //   optional(field("content", alias($._raw_string_content, $.string_content))),
    //   field("close", $._raw_string_close)
    // ),

    // Explanation is:
    // - Between two quote characters, allow either:
    //   - Anything except `'` (or `"`) or `\`
    //   - An escape sequence
    _single_quoted_string: $ => seq(
      field("open", '\''),
      optional(field("content", alias($._single_quoted_string_content, $.string_content))),
      field("close", '\'')
    ),

    _double_quoted_string: $ => seq(
      field("open", '"'),
      optional(field("content", alias($._double_quoted_string_content, $.string_content))),
      field("close", '"')
    ),

    escape_sequence: $ => token.immediate(seq(
      '\\',
      choice(
        /[^0-9xuU]/,
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{1,2}/,
        /u[0-9a-fA-F]{1,4}/,
        /u\{[0-9a-fA-F]{1,4}\}/,
        /U[0-9a-fA-F]{1,8}/,
        /U\{[0-9a-fA-F]{1,8}\}/
      )
    )),

    // NOTE: The ordering here matters. Since `identifier` would match both
    // `dots` and `dot_dot_i` and everyone has the same precedence (of 0),
    // we must put `dots` and `dot_dot_i` first in the grammar itself to
    // allow them to match first.
    dot_dot_i: $ => /[.][.]\d+/,

    // Identifiers.
    // NOTE: `_` isn't a valid way to start an R identifier, but we are a little
    // lax here and parse it anyways. One reason is because want to support a lone `_` as
    // the pipe placeholder identifier. It could be included as a separate `"_"` choice,
    // but then `_foo` parses as two identifiers: `_` and `foo`, making it impossible to
    // check that `_foo` is an invalid identifier. It seems simpler to parse `_foo` as a
    // single identifier, and then let downstream consumers do further checks on the
    // validity as needed (#71).
    // NOTE: Due to the linked tree-sitter discussion, if `_unquoted_identifier` and
    // `_quoted_identifier` are their own hidden terminal rules, then we can't detect error
    // recovered `identifier`s as missing with `ts_node_is_missing()`. The workaround used
    // here inlines the regexes, and wraps the `choice()` call in a single terminal
    // `token()` so `identifier` can still be used as the `word` rule.
    // https://github.com/tree-sitter/tree-sitter/issues/3332
    // NOTE: Do not use this directly in the grammar, use `_identifier` instead!
    identifier: $ => {
      const _unquoted_identifier = /[\p{XID_Start}._][\p{XID_Continue}.]*/;
      const _quoted_identifier = /`((?:\\(.|\n))|[^`\\])*`/;

      return token(
        choice(
          _unquoted_identifier,
          _quoted_identifier
        )
      )
    },

    // NOTE: This is the actual "identifier" used throughout the grammar. R
    // treats `...` and `..i` exactly the same as any other `identifier`
    // throughout the R grammar. In theory, we could collapse `dots` and
    // `dot_dot_i` into `identifier`, but downstream consumers sometimes
    // highlight `dots` and `dot_dot_i` differently than other identifiers. This
    // is supported by the fact that `...` and `..i` are "reserved words" in R,
    // see `?Reserved`. We also considered nesting `dots` and `dot_dot_i` as
    // children under `identifier`, but that is complicated by the fact that we
    // use `identifier` as the `word`, so it needs to be a token (#157, #176).
    true: $ => "TRUE",
    false: $ => "FALSE",
    null: $ => "NULL",
    inf: $ => "Inf",
    nan: $ => "NaN",
    na: $ => choice(
      "NA",
      "NA_integer_",
      "NA_real_",
      "NA_complex_",
      "NA_character_"
    ),

    // A general R expression.
    _expression: $ => choice(
      $.function_definition,

      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.repeat_statement,

      $.braced_expression,
      $.parenthesized_expression,

      $.call,
      $.subset,
      $.subset2,

      $.unary_operator,
      $.binary_operator,
      $.extract_operator,
      $.namespace_operator,

      $.integer,
      $.complex,
      $.float,

      $.string,

      $.identifier,
      $.dots,
      $.dot_dot_i,

      $.next,
      $.break,
      $.true,
      $.false,
      $.null,
      $.inf,
      $.nan,
      $.na
    ),

    // Comments.
    comment: $ => token(withPrec(PREC.COMMENT, /#.*/)),

    // Commas. We include these in the AST so we can figure out the
    // argument call position. This is necessary given how R tolerates
    // missing arguments in function calls.
