test/corpus/literals.txt
================================================================================
Identifiers
================================================================================

foo
foo2
foo.bar
.foo.bar
.__NAMESPACE__.
.
..
._
._.
foo_bar
`_foo`
`a "literal"`
`another
literal \` foo`
`backslash followed by newline \
`
`\``
# Pipe placeholder
_
# Recognized as a single `_foo` identifier, even if invalid R code (#71).
_foo
__foo
_foo_


--------------------------------------------------------------------------------

(program
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (comment)
  (identifier)
  (comment)
  (identifier)
  (identifier)
  (identifier))

================================================================================
Unicode Identifiers
================================================================================

你好
.你.好.
.你_好.

--------------------------------------------------------------------------------

(program
  (identifier)
  (identifier)
  (identifier))

================================================================================
Invalid Identifiers
================================================================================

# R does not allow identifiers to start with a `.` followed by a digit, as this
# would cause ambiguity with `.1L` and `.1i`. R itself rejects this as a syntax
# error, we currently parse this as `.1` followed by `foo`, just like we do with
# `1foo` (#190).
.1foo

--------------------------------------------------------------------------------

(program
  (comment)
  (comment)
  (comment)
  (comment)
  (float)
  (identifier))

================================================================================
Strings
================================================================================

"foo"
"foo
bar"
"#"
","
"}"
'foo'
'foo
bar'
'#'
','
'}'

--------------------------------------------------------------------------------

(program
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content)))

================================================================================
Strings Without Content
================================================================================

""
''

--------------------------------------------------------------------------------

(program
  (string)
  (string))

================================================================================
Strings With Escape Sequences
================================================================================

"\\"
"\ "
"\n"
"\t"
"\r"

"\0"
"\1"
"\7"
"\12"
"\123"
"\1234"

"\x1"
"\x01"
"\x012"

"\u1"
"\u01"
"\u001"
"\u0001"
"\u00011"

"\u{1}"
"\u{01}"
"\u{001}"
"\u{0001}"

"\U{1}"
"\U{01}"
"\U{001}"
"\U{0001}"
"\U{00001}"
"\U{000001}"
"\U{0000001}"
"\U{00000001}"

"\U1"
"\U01"
"\U001"
"\U0001"
"\U00001"
"\U000001"
"\U0000001"
"\U00000001"
"\U000000011"

"foo\"bar"
"foo\ "
"foo\
"
"\""
'\''

--------------------------------------------------------------------------------

(program
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence)))
  (string
    (string_content
      (escape_sequence))))

================================================================================
Raw Strings
================================================================================
r"(raw string)"
R"{another raw string}"
R"--[yet another ]- raw string]--"

r"(")"
r"("")"
r"(')"
r"('')"

r"-(-)-"
r"-()-)-"
r"--()-")--"

r"( () )"
r"(())"
r"( ())"
r"(() )"
r"-())-"
r"-(())-)-"

r"(raw
string
)"

# Empty strings with no `string_content` node
r"()"
r'()'
R"{}"
r"--[]--"

# Leading whitespace and newlines after open
r"(  hello)"
r"(\nhello)"
r"(
hello
)"
f(r"(\nhello\n)")
f(r"(
hello
)")

# Single quoted raw strings
r'(a)'
r'(')'
r'(")'

r()

--------------------------------------------------------------------------------

(program
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (comment)
  (string)
  (string)
  (string)
  (string)
  (comment)
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (call
    (identifier)
    (arguments
      (argument
        (string
          (string_content)))))
  (call
    (identifier)
    (arguments
      (argument
        (string
          (string_content)))))
  (comment)
  (string
    (string_content))
  (string
    (string_content))
  (string
    (string_content))
  (call
    (identifier)
    (arguments)))

================================================================================
Comments
================================================================================

# a comment'

'# not a comment'


'
# still not a comment'

--------------------------------------------------------------------------------

(program
  (comment)
  (string
    (string_content))
  (string
    (string_content)))

================================================================================
Constants
================================================================================

TRUE
FALSE
NULL
Inf
NaN
NA
NA_real_
NA_character_
NA_complex_

--------------------------------------------------------------------------------

(program
  (true)
  (false)
  (null)
  (inf)
  (nan)
  (na)
  (na)
  (na)
  (na))

================================================================================
Integers
================================================================================

12332L
0L
12L
1e1L
# Technically, R parses these as floats with a warning, but for our purposes this is good enough
0.1L
.1L

--------------------------------------------------------------------------------

(program
  (integer)
  (integer)
  (integer)
  (integer)
  (comment)
  (integer)
  (integer))

================================================================================
Floats
================================================================================

.66
.11
123.4123
.1234
x <- -.66

--------------------------------------------------------------------------------

(program
  (float)
  (float)
  (float)
  (float)
  (binary_operator
    (identifier)
    (unary_operator
      (float))))

================================================================================
Hexadecimal
================================================================================

# `x` vs `X`
0x123
0X123

# Numbers and letters
0xDEAD
0XDEAD
0x1f2F3
0X1f2F3

# `p` vs `P`
0x0p0
0x0P0
0x0p123
0x0P123

# `+` and `-`
0x0p+0
0x0p-0
0x0p+123
0x0p-123

# Decimal point
0x.
0x1.
0x.1
0x1.1

# Decimal point with exponent
0x.p1
0x1.p1
0x.1p1
0x1.1p1

# As integers
0x123L
0X123L
0xDEADL
0XDEADL
0x0p0L
0x0P0L
0x0p+0L
0x0p-0L
0x.L
0x1.L
0x.1L
0x1.1L

--------------------------------------------------------------------------------

(program
  (comment)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (float)
  (float)
  (float)
  (float)
  (comment)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================================================================================
Scientific Notation Floats
================================================================================

1e322
1e-3
1e+3
1.8e10
1.e10
1e10

--------------------------------------------------------------------------------

(program
  (float)
  (float)
  (float)
  (float)
  (float)
  (float))

================================================================================
Complex
================================================================================

1i
0i
1.1i
.1i
1e10i
.1e10i
0x1i
0x.1i

--------------------------------------------------------------------------------

(program
  (complex)
  (complex)
  (complex)
  (complex)
  (complex)
  (complex)
  (complex)
  (complex))

================================================================================
Dot Dot I
================================================================================

..1
..10

--------------------------------------------------------------------------------

(program
  (dot_dot_i)
  (dot_dot_i))
